[gd_scene load_steps=6 format=2]

[ext_resource path="res://Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Xolonium-Regular.tres" type="DynamicFont" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1, 3, 0, 0, 0, 0, 478, 3, 0, 0, 0, 0, 477, 714, 0, 0, 0, 0, -2, 709, 0, 0, 0, 0, 1, 3 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Mob = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="TimeElapsedTimer" type="Timer" parent="."]
wait_time = 0.001

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreIncrementTimer" type="Timer" parent="."]

[node name="StartDelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerStartPos" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 1, 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.174
anchor_right = 0.5
anchor_bottom = 0.174
margin_left = -94.0
margin_top = -39.28
margin_right = 94.0
margin_bottom = 38.72
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.837
margin_top = 270.231
margin_right = 118.163
margin_bottom = 348.231
custom_fonts/font = ExtResource( 4 )
text = "0s"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.814
anchor_right = 0.5
anchor_bottom = 0.814
margin_left = -134.0
margin_top = -42.08
margin_right = 134.0
margin_bottom = 41.92
custom_fonts/font = ExtResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="CanvasLayer"]

[node name="Message" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -79.5
margin_right = 203.5
margin_bottom = 79.5
custom_fonts/font = ExtResource( 4 )
text = "JUST
DODGE!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="TimeElapsedTimer" to="." method="_on_TimeElapsedTimer_timeout"]
[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
[connection signal="timeout" from="ScoreIncrementTimer" to="." method="_on_ScoreIncrementTimer_timeout"]
[connection signal="timeout" from="StartDelayTimer" to="." method="_on_StartDelayTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_StartButton_pressed"]
